--- a/client/fields.jade
+++ b/client/fields.jade
@@ -41,7 +41,7 @@ template(name='color_icon_edit')
             |#{this}
     input.color_icon(type='url' value=field_value placeholder='icons8 class' autocomplete="off")
     if field_value
-        img.ui.inline.image(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
+        img.ui.inline.image(src="https://img.icons8.com/office/48/000000/#{field_value}.png")
 
 template(name='icon_edit')
     .ui.right.icon.input
@@ -56,7 +56,7 @@ template(name='icon_edit')
                 |#{this}    
         if field_value
             //- i.large.icon(class=field_value)
-            img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
+            img(src="https://img.icons8.com/office/48/000000/#{field_value}.png")
         input.icon_val(type='text' value=field_value placeholder='font awesome class' autocomplete="off")
 
 
