--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -26,55 +26,56 @@ template(name='user_edit')
                     .ui.form
                         if user_is_resident_or_owner
                             if is_staff
-                                +text_edit key='first_name' label='First Name' direct=true
-                                +text_edit key='last_name' label='Last Name' direct=true
+                                +text_edit key='first_name' label='first name' direct=true
+                                +text_edit key='last_name' label='last name' direct=true
                                 //- +text_edit key='address' label='Address' direct=true
                                 //- +number_edit key='healthclub_code' label='Healthclub Code' direct=true
-                                +number_edit key='unit_number' label='Unit #' direct=true
-                                +number_edit key='building_number' label='Building #' direct=true
+                                +number_edit key='unit_number' label='unit #' direct=true
+                                +number_edit key='building_number' label='building #' direct=true
                                 //- +text_edit key='building_code' label='Building Code' direct=true
-                                +date_edit key='start_date' label='Start Date' direct=true
+                                +date_edit key='start_date' label='start date' direct=true
                                 //- if user_is_owner
                                 //-     +pdf_edit key='ownership_paperwork' label='Ownership Paperwork' direct=true
                                 if user_is_resident
-                                    +date_edit key='expiration_date' label='Expiration Date' direct=true
+                                    +date_edit key='expiration_date' label='expiration date' direct=true
                                 //-     +pdf_edit key='lease_agreement' label='Lease Agreement' direct=true
                                 //- +pdf_edit key='member_guidelines_and_waiver' label='Member Guidelines and Waiver' direct=true
                             else
-                                +text_view key='first_name' label='First Name' direct=true
-                                +text_view key='last_name' label='Last Name' direct=true
-                                +text_view key='address' label='Address' direct=true
-                                +number_view key='unit_number' label='Unit #' direct=true
-                                +number_view key='building_number' label='Building #' direct=true
-                                +text_view key='building_code' label='Building Code' direct=true
-                                +date_view key='start_date' label='Start Date' direct=true
+                                +text_view key='first_name' label='first name' direct=true
+                                +text_view key='last_name' label='last name' direct=true
+                                +text_view key='address' label='address' direct=true
+                                +number_view key='unit_number' label='unit #' direct=true
+                                +number_view key='building_number' label='building #' direct=true
+                                +text_view key='building_code' label='building code' direct=true
+                                +date_view key='start_date' label='start date' direct=true
                                 if user_is_owner
-                                    +image_view key='ownership_paperwork' label='Ownership Paperwork' direct=true
+                                    +image_view key='ownership_paperwork' label='ownership paperwork' direct=true
                                 else if user_is_resident
-                                    +date_view key='expiration_date' label='Expiration Date' direct=true
-                                    +pdf_view key='lease_agreement' label='Lease Agreement' direct=true
-                                +pdf_view key='member_guidelines_and_waiver' label='Lease Agreement' direct=true
-                        //- +text_edit key='email' label='Email' direct=true
-                        +phone_edit key='phone' label='Phone' direct=true
-                        //- +image_edit key='banner_image_id' label='Banner Image' direct=true
+                                    +date_view key='expiration_date' label='expiration date' direct=true
+                                    +pdf_view key='lease_agreement' label='lease agreement' direct=true
+                                +pdf_view key='member_guidelines_and_waiver' label='lease agreement' direct=true
+                        //- +text_edit key='email' label='email' direct=true
+                        +phone_edit key='phone' label='phone' direct=true
+                        //- +image_edit key='banner_image_id' label='banner image' direct=true
                         //- +text_edit key='tagline' label='tag line' direct=true
                         
-                        if is_resident
-                            if is_staff
-                                +array_edit key='tags' label='Tags' direct=true
+                        //- if is_resident
+                        //-     if is_staff
+                        //-         +array_edit key='tags' label='tags' direct=true
                 .column
-                    if is_staff
-                        //- with user_from_username_param
-                        +boolean_edit key='government_id_checked' label='Government Id Checked' direct=true
-                        +single_user_edit key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
-                        +date_edit key='id_checked_date' label='Government Id Checked Date' direct=true
-                    else
-                        +boolean_view key='government_id_checked' label='Government Id Checked' direct=true
-                        +text_view key='id_checked_by_staff' label='Government Id Checked by' role_filter='staff' direct=true
-                        +date_view key='id_checked_date' label='Government Id Checked Date' direct=true
-                        //- with user_from_username_param
-                    +text_edit key='spirit_animal' label='spirit animal' direct=true
-                    +boolean_edit key='published' label='Profile Published'
+                    if user_is_resident_or_owner
+                        if is_staff
+                            //- with user_from_username_param
+                            +boolean_edit key='government_id_checked' label='government id checked' direct=true
+                            +single_user_edit key='id_checked_by_staff' label='government id checked by' role_filter='staff' direct=true
+                            +date_edit key='id_checked_date' label='government id checked date' direct=true
+                        else
+                            +boolean_view key='government_id_checked' label='government id checked' direct=true
+                            +text_view key='id_checked_by_staff' label='government id checked by' role_filter='staff' direct=true
+                            +date_view key='id_checked_date' label='government id checked date' direct=true
+                            //- with user_from_username_param
+                        +text_edit key='spirit_animal' label='spirit animal' direct=true
+                        +boolean_edit key='published' label='Profile Published'
                     //- +payment_methods
                     +user_settings
                     
@@ -82,21 +83,21 @@ template(name='user_edit')
 template(name='user_settings')
     .ui.segment
         .ui.header 
-            i.cog.icon
-            |Settings
+            +i name='setting'
+            |settings
         with user_from_username_param
             +boolean_edit key='show_bookmarked_model_bar' label='Show bookmarked model bar' direct=true
 
 
 template(name='user_model_editor')
-    .ui.header Profile Sections
+    .ui.header profile sections
     each models
         .ui.basic.button.toggle_model(class=user_model_class title=title)
             i.icon(class=icon)
             |#{title}
             
 template(name='user_tribe_editor')
-    .ui.header My Tribes
+    .ui.header my tribes
     each tribes
         .ui.basic.button.toggle_tribe(class=user_tribe_class title=title)
             i.icon(class=icon)
