--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -9,30 +9,30 @@ template(name='delta')
                         | #{title}
                     unless is_loading
                         //- if is_admin
-                        .ui.icon.large.circular.button.add_model_doc(title="Add #{title}")
+                        .ui.icon.large.button.add_model_doc(title="Add #{title}")
                             i.plus.large.icon
                         //- if can_edit
                             //- +edit_circular.button
                         +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
             
                         if can_edit
-                            .ui.icon.large.circular.button.edit_model
+                            .ui.icon.large.button.edit_model
                                 i.cog.icon
                                 //- | Configure #{plural}
                         // .ui.divider
                         // // each sessions
-                        // //     .ui.icon.circular.button.select_session(class=session_selector_class title='select session')
+                        // //     .ui.icon.button.select_session(class=session_selector_class title='select session')
                         // //         i.play.icon
                         if current_delta
                             if is_dev
-                                .ui.icon.large.circular.button.print_delta(title='Print Session Doc')
+                                .ui.icon.large.button.print_delta(title='Print Session Doc')
                                     i.code.icon
-                            .ui.reset.icon.large.circular.button(title='Reload Session')
+                            .ui.reset.icon.large.button(title='Reload Session')
                                 i.refresh.icon
-                            .ui.delete_delta.icon.large.circular.button(title='Delete Session')
+                            .ui.delete_delta.icon.large.button(title='Delete Session')
                                 i.trash.icon
                         else
-                            .create_delta.ui.large.circular.button(title='new session')
+                            .create_delta.ui.large.button(title='new session')
                                 i.plus.icon
                                 |session
                         .ui.segment
@@ -73,22 +73,22 @@ template(name='facet')
                     //- div
                 each filtering_res
                     if name
-                        .selector.ui.compact.circular.button.toggle_selection(class=toggle_value_class title=count)
+                        .selector.ui.compact.large.button.toggle_selection(class=toggle_value_class title=count)
                             strong #{name}
                             if is_admin
                                 small #{cal_count} #{count}
                     else
-                        .selector.ui.circular.button.toggle_selection(class=toggle_value_class title=count)
+                        .selector.ui.button.toggle_selection(class=toggle_value_class title=count)
                             strong [null]
                             //- small #{cal_count}
 
 template(name='toggle_delta_config')
     if boolean_true
-        .ui.grey.active.icon.circular.button.disable_key(title=label)
+        .ui.grey.active.icon.button.disable_key(title=label)
             i.icon(class=icon)
             // | #{label}
     else
-        .ui.icon.circular.button.enable_key(title=label)
+        .ui.icon.button.enable_key(title=label)
             i.icon(class=icon)
             // | #{label}
 
@@ -124,19 +124,19 @@ template(name='delta_result')
             +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
             .extra
                 if is_model
-                    a.ui.circular.button.route_model(href="/m/#{slug}")
+                    a.ui.button.route_model(href="/m/#{slug}")
                         i.sitemap.icon
                         |view model
                     if is_admin
-                        a.ui.circular.button.route_model(href="/model/edit/#{_id}")
+                        a.ui.button.route_model(href="/model/edit/#{_id}")
                             i.edit.icon
                             |edit model
                 else
                     if can_edit
-                        a.ui.large.icon.circular.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                        a.ui.large.icon.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
                             i.pencil.large.icon
                             //- |edit
-                    a.ui.icon.large.circular.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                    a.ui.icon.large.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
                         i.right.chevron.large.icon
                         //- |view
                     //- if is_post
